ast/src/snapshots/ast__parser__tests__use_snapshots@use_empty.snap
---
source: ast/src/parser.rs
expression: "parse(\"class Foo { }\")"
---
[
    TypeDefinition(
        Class(
            ClassDefinition {
                name: Identifier {
                    name: "Foo",
                    location: Location(
                        6..9,
                    ),
                },
                builtin: false,
                members: [],
                location: Location(
                    0..13,
                ),
            },
        ),
    ),
]
