ast/src/snapshots/ast__parser__tests__use_snapshots@use_generic.snap
---
source: ast/src/parser.rs
expression: "parse(\"class Foo { use Bar<Baz> }\")"
---
[
    TypeDefinition(
        Class(
            ClassDefinition {
                name: Identifier {
                    name: "Foo",
                    location: Location(
                        6..9,
                    ),
                },
                builtin: false,
                members: [
                    Use(
                        UseTrait {
                            trait_type: Generic(
                                GenericType {
                                    name: Identifier {
                                        name: "Bar",
                                        location: Location(
                                            16..19,
                                        ),
                                    },
                                    type_params: [
                                        Scalar(
                                            ScalarType {
                                                name: "Baz",
                                                location: Location(
                                                    20..23,
                                                ),
                                            },
                                        ),
                                    ],
                                    location: Location(
                                        19..24,
                                    ),
                                },
                            ),
                            location: Location(
                                12..24,
                            ),
                        },
                    ),
                ],
                location: Location(
                    0..26,
                ),
            },
        ),
    ),
]
