ast/src/snapshots/ast__parser__tests__use_snapshots@use_multiple.snap
---
source: ast/src/parser.rs
expression: "parse(\"class Foo { use Bar use Baz }\")"
---
[
    TypeDefinition(
        Class(
            ClassDefinition {
                name: Identifier {
                    name: "Foo",
                    location: Location(
                        6..9,
                    ),
                },
                builtin: false,
                members: [
                    Use(
                        UseTrait {
                            trait_type: Scalar(
                                ScalarType {
                                    name: "Bar",
                                    location: Location(
                                        16..19,
                                    ),
                                },
                            ),
                            location: Location(
                                12..19,
                            ),
                        },
                    ),
                    Use(
                        UseTrait {
                            trait_type: Scalar(
                                ScalarType {
                                    name: "Baz",
                                    location: Location(
                                        24..27,
                                    ),
                                },
                            ),
                            location: Location(
                                20..27,
                            ),
                        },
                    ),
                ],
                location: Location(
                    0..29,
                ),
            },
        ),
    ),
]
