ast/src/snapshots/ast__parser__tests__use_trait_snapshots@generics.snap
---
source: ast/src/parser.rs
expression: "parse(r#\"\n            use Add<Int32, Int64> in Int32 {\n                pub fn add(other: Int32) -> Int64 {\n                    return self + other;\n                }\n            }\"#)"
---
[
    Use(
        UseTrait {
            name: Identifier {
                name: "Add",
                location: Location(
                    17..20,
                ),
            },
            target: Identifier {
                name: "Int32",
                location: Location(
                    38..43,
                ),
            },
            type_parameters: [
                TypeParameter {
                    name: Identifier {
                        name: "Int32",
                        location: Location(
                            21..26,
                        ),
                    },
                },
                TypeParameter {
                    name: Identifier {
                        name: "Int64",
                        location: Location(
                            28..33,
                        ),
                    },
                },
            ],
            methods: [
                TraitMethodImplementation {
                    visibility: Public(
                        Public {
                            location: Location(
                                62..65,
                            ),
                        },
                    ),
                    name: Identifier {
                        name: "add",
                        location: Location(
                            69..72,
                        ),
                    },
                    parameters: [
                        Parameter {
                            name: Identifier {
                                name: "other",
                                location: Location(
                                    73..78,
                                ),
                            },
                            param_type: Scalar(
                                ScalarType {
                                    name: "Int32",
                                    location: Location(
                                        80..85,
                                    ),
                                },
                            ),
                            location: Location(
                                73..85,
                            ),
                        },
                    ],
                    type_parameters: [],
                    return_type: Scalar(
                        ScalarType {
                            name: "Int64",
                            location: Location(
                                90..95,
                            ),
                        },
                    ),
                    block: Block {
                        statements: [
                            Return(
                                Return {
                                    value: Some(
                                        Call(
                                            Call {
                                                callee: Some(
                                                    Variable(
                                                        Variable {
                                                            name: Identifier {
                                                                name: "self",
                                                                location: Location(
                                                                    125..129,
                                                                ),
                                                            },
                                                        },
                                                    ),
                                                ),
                                                name: Identifier {
                                                    name: "+",
                                                    location: Location(
                                                        130..131,
                                                    ),
                                                },
                                                arguments: [
                                                    Variable(
                                                        Variable {
                                                            name: Identifier {
                                                                name: "other",
                                                                location: Location(
                                                                    132..137,
                                                                ),
                                                            },
                                                        },
                                                    ),
                                                ],
                                                type_parameters: [],
                                                location: Location(
                                                    125..132,
                                                ),
                                            },
                                        ),
                                    ),
                                    location: Location(
                                        118..138,
                                    ),
                                },
                            ),
                        ],
                        location: Location(
                            96..156,
                        ),
                    },
                    location: Location(
                        62..156,
                    ),
                },
            ],
            location: Location(
                13..170,
            ),
        },
    ),
]
